Bug 495618 - "Reloading form posts fails with javascript nsIPromptService implementation". r+sr=bzbarsky