netwerk/protocol/gopher/src/nsGopherChannel.cpp
@@ -321,8 +321,9 @@ nsGopherContentStream::PromptForQueryString(nsCString &result)
 
     nsXPIDLString value;
     PRBool res = PR_FALSE;
+    PRBool checkState;
     prompter->Prompt(promptTitle.get(), promptText.get(),
-                     getter_Copies(value), NULL, NULL, &res);
+                     getter_Copies(value), NULL, &checkState, &res);
     if (!res || value.IsEmpty())
         return NS_ERROR_FAILURE;
 
